Fixed responitivity issue on small screens#

--- a/css/bet.css
+++ b/css/bet.css
@@ -263,6 +263,7 @@ input[class=radioOption]:checked ~ .alternative {
 }
 @media screen and (max-width: 904px) {
   .grid {
+    width: 100%;
     grid-template-columns: 1fr;
   }
 }
