--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background: rgb(228, 228, 228);
+    background: #e9e9e9;
     overflow-y: scroll;
 }
 
@@ -571,6 +571,11 @@ a:hover {
   color: #9addb1;
 }
 
+#menu a:hover > svg path {
+    fill: #9addb1;
+    color: #9addb1;
+}
+
 #closeMenu:hover {
   color: #ff5d55;
 }
@@ -637,9 +642,14 @@ button:focus {
 }
 
 .winnerOption {
-    border-left: 2px solid yellow !IMPORTANT;
+    border-left: 3px solid yellow !IMPORTANT;
 }
 
 .alternative {
-    border-left: 2px solid rgba(0, 0, 0, 0);
+    border-left: 3px solid rgba(0, 0, 0, 0);
+}
+
+nav svg path {
+    fill: #fafafa;
+    color: #fafafa;
 }
